db-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hamravesh-project 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
  namespace: hamravesh-project
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc 
---
apiVersion: v1
kind: Service
metadata:
  name: db-service 
  namespace: hamravesh-project
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
